// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders username and body 1`] = `
<div
  className="Comment-root"
  role="article"
>
  <div
    className="Comment-topBar"
  >
    <Username>
      Marvin
    </Username>
    <withPropsOnChange(RelativeTime)
      date="1995-12-17T06:24:00.000Z"
    />
  </div>
  <withPropsOnChange(Typography)>
    Woof
  </withPropsOnChange(Typography)>
</div>
`;

exports[`renders with gutterBottom 1`] = `
<div
  className="Comment-root Comment-gutterBottom"
  role="article"
>
  <div
    className="Comment-topBar"
  >
    <Username>
      Marvin
    </Username>
    <withPropsOnChange(RelativeTime)
      date="1995-12-17T06:24:00.000Z"
    />
  </div>
  <withPropsOnChange(Typography)>
    Woof
  </withPropsOnChange(Typography)>
</div>
`;
